@@ -51,6 +51,11 @@ if(is.null(file))  {
   
   ## create output
   setContentType("text/html")
+  ## set cache headers
+  setHeader("Cache-Control", "max-age=31536000")
+  setHeader("Last-Modified", format(file.info(f)$mtime,"%a %b %e %Y %H:%M:%S GMT%z (%Z)"))
+  setHeader("Expires", format(Sys.time() + 60*60*24, "%a %b %e %Y %H:%M:%S GMT%z (%Z)"))
+            
   out <- String() ## gWidgetsWWW is loaded in
   out <- out +
     '<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"' +
